--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,4 +6,4 @@ include:
     - local: 'gitlab-ci/deploy.yml'
     - local: 'gitlab-ci/dev.yml'
     - local: 'gitlab-ci/test.yml'
-    - local: 'gitlab-ci/prod.yml'
+    - local: 'gitlab-ci/PROD.yml'
