--- a/gitlab-ci/deploy.yml
+++ b/gitlab-ci/deploy.yml
@@ -4,8 +4,10 @@
     environment:
         name: $ENV
     before_script:
+        - echo "HELLO"
         - terraform --version
     script:
+        - echo "HELLO"
         - terraform init -backend-config="path=backend-${ENV}.tfstate"
         - terraform plan -out="${ENV}.tfplan" -var-file=${ENV}.tfvars
     artifacts:
@@ -19,4 +21,5 @@
     environment:
         name: $ENV
     script:
+        - echo "HELLO"
         - terraform apply "${ENV}.tfplan"
