--- a/gitlab-ci/deploy.yml
+++ b/gitlab-ci/deploy.yml
@@ -1,6 +1,6 @@
 .plan_template:
     stage: plan
-    image: hashicorp/terraform
+    image: hashicorp/terraform:1.6.0
     environment:
         name: $ENV
     before_script:
@@ -17,7 +17,7 @@
 
 .apply_template:
     stage: apply
-    image: hashicorp/terraform
+    image: hashicorp/terraform:1.6.0
     environment:
         name: $ENV
     script:
