--- a/gitlab-ci/deploy.yml
+++ b/gitlab-ci/deploy.yml
@@ -1,6 +1,8 @@
 .plan_template:
     stage: plan
-    image: hashicorp/terraform:1.6.0
+    image:
+        name: hashicorp/terraform:1.6.0
+        entrypoint: [""]
     environment:
         name: $ENV
     before_script:
