--- a/gitlab-ci/deploy.yml
+++ b/gitlab-ci/deploy.yml
@@ -12,7 +12,7 @@
     script:
         - cd infra
         - terraform init -backend-config="path=backend-${ENV}.tfstate"
-        - terraform plan -out="${ENV}.tfplan"
+        - terraform plan -out="${ENV}.tfplan -var="env_name=${ENV}"
     artifacts:
         paths:
             - "${ENV}.tfplan"
