--- a/gitlab-ci/test.yml
+++ b/gitlab-ci/test.yml
@@ -5,6 +5,11 @@
         - if: '$CI_COMMIT_BRANCH == "main"'
           when: always
 
+validate_test:
+    extends:
+        - .test_template
+        - .validate_template
+
 plan_test:
     extends:
         - .test_template
