--- a/gitlab-ci/PROD.yml
+++ b/gitlab-ci/PROD.yml
@@ -5,6 +5,11 @@
         - if: '$CI_COMMIT_BRANCH == "main" && $CI_COMMIT_TAG'
           when: always
 
+validate_PROD:
+    extends:
+        - .PROD_template
+        - .validate_template
+
 plan_PROD:
     extends:
         - .PROD_template
