--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,2 @@
-stages:
-    - validate
-    - plan
-    - apply
-
 include:
-    - local: 'gitlab-ci/deploy.yml'
-    - local: 'gitlab-ci/dev.yml'
-    - local: 'gitlab-ci/test.yml'
-    - local: 'gitlab-ci/PROD.yml'
+  - local: 'ci-gitlab/main.yml'
