--- a/gitlab-ci/dev.yml
+++ b/gitlab-ci/dev.yml
@@ -10,13 +10,26 @@ validate_dev:
         - .dev_template
         - .validate_template
 
+fail_pipeline_on_failure_validate_dev:
+    <<: *fail_pipeline_on_failure
+    stage: validate
+
 plan_dev:
     extends:
         - .dev_template
         - .plan_template
+
+fail_pipeline_on_failure_plan_dev:
+    <<: *fail_pipeline_on_failure
+    stage: plan
 
 apply_dev:
     extends:
         - .dev_template
         - .apply_template
     when: manual
+
+fail_pipeline_on_failure_apply_dev:
+    <<: *fail_pipeline_on_failure
+    stage: apply
+
