--- a/gitlab-ci/job_templates.yml
+++ b/gitlab-ci/job_templates.yml
@@ -38,7 +38,7 @@
         - opentofu init -backend-config="backend-${ENV}.tf"
         - opentofu apply "${ENV}.tfplan"
 
-.fail_pipeline_on_failure: &fail_pipeline_on_failure
+.fail_pipeline_on_failure:
   script:
     - |
       if [[ "$CI_JOB_STATUS" == "failed" ]]; then
