--- a/gitlab-ci/dev.yml
+++ b/gitlab-ci/dev.yml
@@ -11,7 +11,7 @@ validate_dev:
         - .validate_template
 
 fail_pipeline_on_failure_validate_dev:
-    extends: fail_pipeline_on_failure
+    extends: .fail_pipeline_on_failure
     stage: validate
 
 plan_dev:
