--- a/gitlab-ci/job_templates.yml
+++ b/gitlab-ci/job_templates.yml
@@ -6,7 +6,7 @@
         name: $ENV
     script:
         - cd infra
-        - tofu init -backend=false
+        - tofu init -backend-config="backend-${ENV}.tf"
         - tofu validate
 
 .plan_template:
