--- a/gitlab-ci/job_templates.yml
+++ b/gitlab-ci/job_templates.yml
@@ -6,7 +6,7 @@
         name: $ENV
     script:
         - cd infra
-        - tofu init -backend-config="backend-${ENV}.tf"
+        - tofu init
         - tofu validate
 
 .plan_template:
@@ -17,7 +17,7 @@
         name: $ENV
     script:
         - cd infra
-        - tofu init -backend-config="backend-${ENV}.tf"
+        - tofu init
         - tofu plan -out="${ENV}.tfplan" -var="env_name=${ENV}"
     artifacts:
         paths:
@@ -32,5 +32,5 @@
         name: $ENV
     script:
         - cd infra
-        - tofu init -backend-config="backend-${ENV}.tf"
+        - tofu init
         - tofu apply "${ENV}.tfplan"
