--- a/cicd/job_templates.yml
+++ b/cicd/job_templates.yml
@@ -1,6 +1,13 @@
 .build_template:
     stage: build
-    image: bash:latest
+    image: docker:25.0.13
+    services:
+        - docker:25.0.13-dind
+    variables:
+        DOCKER_HOST: tcp://docker:2375/
+        DOCKER_TLS_CERTDIR: ""
+    before_script:
+        - apk add --no-cache bash zip
     script:
         - bash util/zip_lambda.sh
     artifacts:
