--- a/cicd/job_templates.yml
+++ b/cicd/job_templates.yml
@@ -38,6 +38,7 @@
     environment:
         name: $ENV
     script:
+        - echo "AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}"
         - cd infra
         - tofu init
         - tofu plan -out="${ENV}.tfplan" -var="env_name=${ENV}"
