--- a/cicd/dev.yml
+++ b/cicd/dev.yml
@@ -1,6 +1,8 @@
 .dev_template:
+    environment:
+        name: dev
     variables:
-        ENV: dev
+        GITLAB_ENV: dev
     rules:
         - if: '$CI_COMMIT_BRANCH != "main"'
 
