--- a/cicd/job_templates.yml
+++ b/cicd/job_templates.yml
@@ -53,4 +53,4 @@
     script:
         - cd infra
         - tofu init
-        - tofu apply "artifacts/${gitlab_env}.tfplan"
+        - tofu apply "../artifacts/${gitlab_env}.tfplan"
