--- a/cicd/job_templates.yml
+++ b/cicd/job_templates.yml
@@ -25,7 +25,7 @@
         name: oowy/opentofu:1.9.1-alpine3.20
     script:
         - cd infra
-        - tofu init
+        - tofu init -backend-config="$OT_BACKEND_CONFIG"
         - tofu validate
     artifacts:
         paths:
@@ -39,7 +39,7 @@
         name: oowy/opentofu:1.9.1-alpine3.20
     script:
         - cd infra
-        - tofu init
+        - tofu init -backend-config="$OT_BACKEND_CONFIG"
         - tofu plan -out="../artifacts/${gitlab_env}.tfplan" -var="gitlab_env=${gitlab_env}"
     artifacts:
         paths:
@@ -52,5 +52,5 @@
         name: oowy/opentofu:1.9.1-alpine3.20
     script:
         - cd infra
-        - tofu init
+        - tofu init -backend-config="$OT_BACKEND_CONFIG"
         - tofu apply "../artifacts/${gitlab_env}.tfplan"
