--- a/cicd/job_templates.yml
+++ b/cicd/job_templates.yml
@@ -25,7 +25,7 @@
         name: oowy/opentofu:1.9.1-alpine3.20
     script:
         - cd infra
-        - tofu init -backend-config="$OT_BACKEND_CONFIG"
+        - tofu init -backend-config="project=FidoCred/fidocred-api" -backend-config="environment=dev"
         - tofu validate
     artifacts:
         paths:
@@ -39,8 +39,7 @@
         name: oowy/opentofu:1.9.1-alpine3.20
     script:
         - cd infra
-        - echo ${OT_BACKEND_CONFIG}
-        - tofu init -backend-config="${OT_BACKEND_CONFIG}"
+        - tofu init -backend-config="project=FidoCred/fidocred-api" -backend-config="environment=dev"
         - tofu plan -out="../artifacts/${gitlab_env}.tfplan" -var="gitlab_env=${gitlab_env}"
     artifacts:
         paths:
@@ -53,5 +52,5 @@
         name: oowy/opentofu:1.9.1-alpine3.20
     script:
         - cd infra
-        - tofu init -backend-config="$OT_BACKEND_CONFIG"
+        - tofu init -backend-config="project=FidoCred/fidocred-api" -backend-config="environment=dev"
         - tofu apply "../artifacts/${gitlab_env}.tfplan"
