--- a/cicd/main.yml
+++ b/cicd/main.yml
@@ -13,9 +13,9 @@ include:
 variables:
     gitlab_env: "$CI_ENVIRONMENT_NAME"
     TF_BACKEND_CONFIG: >
-        -backend-config="bucket=fidocred-${gitlab_env}-tfstate"
-        -backend-config="key=terraform.tfstate"
-        -backend-config="region=us-east-1"
-        -backend-config="dynamodb_table=fidocred-${gitlab_env}-locks"
-        -backend-config="encrypt=true"
+        -backend-config=bucket=fidocred-${gitlab_env}-tfstate
+        -backend-config=key=terraform.tfstate
+        -backend-config=region=us-east-1
+        -backend-config=dynamodb_table=fidocred-${gitlab_env}-locks
+        -backend-config=encrypt=true
 
