--- a/cicd/dev.yml
+++ b/cicd/dev.yml
@@ -12,47 +12,47 @@ build_dev:
 validate_network_dev:
     extends:
         - .dev_template
-        - .validate_template
+        - .validate_network_template
 
 validate_db_dev:
     extends:
         - .dev_template
-        - .validate_template
+        - .validate_db_template
 
 validate_app_dev:
     extends:
         - .dev_template
-        - .validate_template
+        - .validate_app_template
 
 plan_network_dev:
     extends:
         - .dev_template
-        - .plan_template
+        - .plan_network_template
 
 plan_db_dev:
     extends:
         - .dev_template
-        - .plan_template
+        - .plan_db_template
 
 plan_app_dev:
     extends:
         - .dev_template
-        - .plan_template
+        - .plan_app_template
 
 apply_network_dev:
     extends:
         - .dev_template
-        - .apply_template
+        - .apply_network_template
 
 apply_db_dev:
     extends:
         - .dev_template
-        - .apply_template
+        - .apply_db_template
 
 apply_app_dev:
     extends:
         - .dev_template
-        - .apply_template
+        - .apply_app_template
 
 #TODO
 #db_setup_dev:
