--- a/cicd/main.yml
+++ b/cicd/main.yml
@@ -20,9 +20,9 @@ variables:
         -backend-config=region=${TF_BACKEND_REGION}
         -backend-config=dynamodb_table=${TF_BACKEND_LOCK_TABLE}
         -backend-config=encrypt=true
-    TF_BACKEND_KEY_NETWORK: -backend-config="key=network/terraform.tfstate"
-    TF_BACKEND_KEY_DB:      -backend-config="key=db/terraform.tfstate"
-    TF_BACKEND_KEY_APP:     -backend-config="key=app/terraform.tfstate"
+    TF_BACKEND_KEY_NETWORK: -backend-config=key=network/terraform.tfstate
+    TF_BACKEND_KEY_DB:      -backend-config=key=db/terraform.tfstate
+    TF_BACKEND_KEY_APP:     -backend-config=key=app/terraform.tfstate
     TF_NETWORK_VARS: >
         -var="gitlab_env=${GITLAB_ENV}"
     TF_DB_VARS: >
