--- a/cicd/main.yml
+++ b/cicd/main.yml
@@ -24,17 +24,17 @@ variables:
     TF_BACKEND_KEY_DB:      -backend-config=key=db/terraform.tfstate
     TF_BACKEND_KEY_APP:     -backend-config=key=app/terraform.tfstate
     TF_NETWORK_VARS: >
-        -var="gitlab_env=${GITLAB_ENV}"
+        -var=gitlab_env=${GITLAB_ENV}
     TF_DB_VARS: >
-        -var="gitlab_env=${GITLAB_ENV}"
-        -var="remote_state_bucket=${TF_BACKEND_BUCKET}
-        -var="remote_state_region=${TF_BACKEND_REGION}
-        -var="remote_state_key_network=network/terraform.tfstate"
-        -var="remote_state_lock_table=${TF_BACKEND_LOCK_TABLE}
+        -var=gitlab_env=${GITLAB_ENV}
+        -var=remote_state_bucket=${TF_BACKEND_BUCKET}
+        -var=remote_state_region=${TF_BACKEND_REGION}
+        -var=remote_state_key_network=network/terraform.tfstate
+        -var=emote_state_lock_table=${TF_BACKEND_LOCK_TABLE}
     TF_APP_VARS: >
-        -var="gitlab_env=${GITLAB_ENV}"
-        -var="remote_state_bucket=${TF_BACKEND_BUCKET}
-        -var="remote_state_region=${TF_BACKEND_REGION}
-        -var="remote_state_key_network=network/terraform.tfstate"
-        -var="remote_state_key_db=db/terraform.tfstate"
-        -var="remote_state_lock_table=${TF_BACKEND_LOCK_TABLE}
+        -var=gitlab_env=${GITLAB_ENV}
+        -var=remote_state_bucket=${TF_BACKEND_BUCKET}
+        -var=remote_state_region=${TF_BACKEND_REGION}
+        -var=remote_state_key_network=network/terraform.tfstate
+        -var=remote_state_key_db=db/terraform.tfstate
+        -var=remote_state_lock_table=${TF_BACKEND_LOCK_TABLE}
