--- a/cicd/main.yml
+++ b/cicd/main.yml
@@ -23,7 +23,7 @@ variables:
     TF_BACKEND_KEY_NETWORK: -backend-config=key=network/terraform.tfstate
     TF_BACKEND_KEY_DB:      -backend-config=key=db/terraform.tfstate
     TF_BACKEND_KEY_APP:     -backend-config=key=app/terraform.tfstate
-    TF_NETWORK_VARS: ""
+    TF_NETWORK_VARS: ''
     TF_DB_VARS: >
         -var=remote_state_bucket=${TF_BACKEND_BUCKET}
         -var=remote_state_region=${TF_BACKEND_REGION}
