--- a/cicd/job_templates.yml
+++ b/cicd/job_templates.yml
@@ -53,6 +53,7 @@
     script:
         - cd infra/network
         - tofu init $TF_BACKEND_CONFIG $TF_BACKEND_KEY_NETWORK
+        - echo ${GITLAB_ENV} ${CI_ENVIRONMENT_NAME}
         - tofu plan -out="../../artifacts/${GITLAB_ENV}-network.tfplan" $TF_NETWORK_VARS
     artifacts:
         paths:
