--- a/cicd/job_templates.yml
+++ b/cicd/job_templates.yml
@@ -1,6 +1,6 @@
 .setup_env_template:
     before_script:
-        - bash ci_env_vars.sh
+        - . ci_env_vars.sh
 
 .build_template:
     extends:
